Semantic HTML and Basic CSS Styling Assignment

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-<meta charset="UTF-8">    
-<title>My Fitst Page</title>    
+<meta charset="UTF-8">  
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>CIT 230 Assignment Portal | Raylee S. Haws | BYU-Idaho</title>
+<meta name="description" content="Assignment portal page for Raylee Haws in CIT 230: Web Frontend Development at Brigham Young University-Idaho">
+<link rel="stylesheet" href="styles/main.css">
 </head>
-
+    
 <body>
-<h1>Test for CIT230! </h1>
-    <p>This is a test</p>
+    <header>
+        <img src="images/IMG_0121 resized.jpg" width="153" height="204" alt="My Profile Picture">
+        <h1>Raylee S. Haws</h1>
+    </header>
+    <nav>
+        <!-- There will be a future Main menu --> 
+    </nav>
+    <main>
+        <h2>CIT 230 - Assignment Portal</h2>
+        <ul>
+            <li>Lesson 2: <a href="futurepage.html">Future Assignments Page</a></li>
+        </ul>
+    </main>
+    <footer>
+        <P>&copy 2018 &#9734 Raylee S. Haws &#9734 Indiana &#9734 <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></P>
+    </footer>
 </body>
 </html>
