--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </main>
     <footer>
-        <P>&copy 2018 &#9734 Raylee S. Haws &#9734 Indiana &#9734 <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></P>
+        <P>&copy; 2018 &#9734; Raylee S. Haws &#9734; Indiana &#9734; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></P>
     </footer>
 </body>
 </html>
