--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <h2>CIT 230 - Assignment Portal</h2>
         <ul>
             <li>Lesson 2: <a href="futurepage.html">Future Assignments Page</a></li>
+            <li>Lesson 3: <a href="/Lesson-3/fixedhtml.html"></a>Fixed HTML</li>
+            <li>Lesson 4: <a href="/Lesson-4/franklin-4.html"></a>Franklin-4</li>
+            <li>Lesson 5: <a href="/Lesson-5/Index-5.html">Franklin-5</a></li>
+            <li>Lesson 6: <a href="/Lesson-6/Index-6.html">Franklin-6</a></li>
         </ul>
     </main>
     <footer>
