--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li>Lesson 4: <a href="/Lesson-4/franklin-4.html">Franklin-4</a></li>
             <li>Lesson 5: <a href="/Lesson-5/Index-5.html">Franklin-5</a></li>
             <li>Lesson 6: <a href="/Lesson-6/Index-6.html">Franklin-6</a></li>
+            <li>Lesson 7: <a href="/Lesson-7/franklin.html">Franklin-7</a></li>
         </ul>
     </main>
     <footer>
