--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li>Lesson 5: <a href="/Lesson-5/Index-5.html">Franklin-5</a></li>
             <li>Lesson 6: <a href="/Lesson-6/Index-6.html">Franklin-6</a></li>
             <li>Lesson 7: <a href="/Lesson-7/franklin.html">Franklin-7</a></li>
+            <li>Lesson 8: <a href="/Lesson-8-assignment-1/lesson-8-assignment-1.html">ACME Table</a></li>
         </ul>
     </main>
     <footer>
