--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>Lesson 6: <a href="/Lesson-6/Index-6.html">Franklin-6</a></li>
             <li>Lesson 7: <a href="/Lesson-7/franklin.html">Franklin-7</a></li>
             <li>Lesson 8: <a href="/Lesson-8-assignment-1/lesson-8-assignment-1.html">ACME Table</a></li>
+            <li>Lesson 8: <a href="/Lesson-8/stormcenter.html">Storm Center</a></li>
         </ul>
     </main>
     <footer>
