--- a/Lesson-8/stormcenter.html
+++ b/Lesson-8/stormcenter.html
@@ -46,7 +46,7 @@
 		<p>Let us know what's going on in your neck of the woods!</p>
 		
 		<!----------------------- FORM --------------------------> 
-		<form name="stormcenter" action="thanks.html" enctype="multipart/form-data" method="post">
+		<form name="stormcenter" action="thanks.html" enctype="multipart/form-data" method="get">
 
 			<fieldset>
 				<legend>Personal Information</legend>      
