--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li>Lesson 7: <a href="/Lesson-7/franklin.html">Franklin-7</a></li>
             <li>Lesson 8: <a href="/Lesson-8-assignment-1/lesson-8-assignment-1.html">ACME Table</a></li>
             <li>Lesson 8: <a href="/Lesson-8/stormcenter.html">Storm Center</a></li>
+            <li>Lesson 9: <a href="/JSON-lesson-9/heroes.html">JSON Heroes</a></li>
         </ul>
     </main>
     <footer>
