--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li>Lesson 8: <a href="/Lesson-8-assignment-1/lesson-8-assignment-1.html">ACME Table</a></li>
             <li>Lesson 8: <a href="/Lesson-8/stormcenter.html">Storm Center</a></li>
             <li>Lesson 9: <a href="/JSON-lesson-9/heroes.html">JSON Heroes</a></li>
+            <li>Lesson 9: <a href="/Lesson-9/Index.html">Weather Underground JSON</a></li>
         </ul>
     </main>
     <footer>
