--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li>Lesson 8: <a href="/Lesson-8/stormcenter.html">Storm Center</a></li>
             <li>Lesson 9: <a href="/JSON-lesson-9/heroes.html">JSON Heroes</a></li>
             <li>Lesson 9: <a href="/Lesson-9/Index.html">Weather Underground JSON</a></li>
+            <li>Lesson 10: <a href="/Lesson-10/Index.html">Finished Weather Site</a></li>
         </ul>
     </main>
     <footer>
