--- a/Lesson-10/franklin.html
+++ b/Lesson-10/franklin.html
@@ -135,8 +135,8 @@
 	<script>
 	var citynum = 0;
 	var totalCities = 1;
-	var cityurl = 'http://api.wunderground.com/api/89f8b8af653f3faa/conditions/q/MN/Franklin.json';
-	var forecasturl = 'http://api.wunderground.com/api/89f8b8af653f3faa/forecast/q/MN/Franklin.json';
+	var cityurl = '//api.wunderground.com/api/89f8b8af653f3faa/conditions/q/MN/Franklin.json';
+	var forecasturl = '//api.wunderground.com/api/89f8b8af653f3faa/forecast/q/MN/Franklin.json';
 	</script>
 	<script src="scripts/hamburger.js"></script>
 	<script src="scripts/currentdate.js"></script>
