--- a/Lesson-10/springfield.html
+++ b/Lesson-10/springfield.html
@@ -100,8 +100,8 @@
 	<script>
 	var citynum = 3;
 	var totalCities = 1;
-	var cityurl = 'http://api.wunderground.com/api/89f8b8af653f3faa/conditions/q/OR/Springfield.json';
-	var forecasturl = 'http://api.wunderground.com/api/89f8b8af653f3faa/forecast/q/OR/Springfield.json';
+	var cityurl = '//api.wunderground.com/api/89f8b8af653f3faa/conditions/q/OR/Springfield.json';
+	var forecasturl = '//api.wunderground.com/api/89f8b8af653f3faa/forecast/q/OR/Springfield.json';
 	</script>
 	<script src="scripts/hamburger.js"></script>
 	<script src="scripts/currentdate.js"></script>
