--- a/Lesson-10/greenville.html
+++ b/Lesson-10/greenville.html
@@ -99,8 +99,8 @@
 	<script>
 	var citynum = 1;
 	var totalCities = 1;
-	var cityurl = 'http://api.wunderground.com/api/89f8b8af653f3faa/conditions/q/TX/Greenville.json';
-	var forecasturl = 'http://api.wunderground.com/api/89f8b8af653f3faa/forecast/q/TX/Greenville.json';
+	var cityurl = '//api.wunderground.com/api/89f8b8af653f3faa/conditions/q/TX/Greenville.json';
+	var forecasturl = '//api.wunderground.com/api/89f8b8af653f3faa/forecast/q/TX/Greenville.json';
 	</script>
 	<script src="scripts/hamburger.js"></script>
 	<script src="scripts/currentdate.js"></script>
