--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <li>Lesson 9: <a href="/JSON-lesson-9/heroes.html">JSON Heroes</a></li>
             <li>Lesson 9: <a href="/Lesson-9/Index.html">Weather Underground JSON</a></li>
             <li>Lesson 10: <a href="/Lesson-10/Index.html">Finished Weather Site</a></li>
+            <li>Lesson 11: <a href="/Lesson-11/intro-jquery-files/Lesson2/index.html">Tutorial lesson 2</a></li>
+            <li>Lesson 11: <a href="/Lesson-11/intro-jquery-files/Lesson3/index.html">Tutorial lesson 3</a></li>
+            <li>Lesson 11: <a href="/Lesson-11/intro-jquery-files/Lesson4/index.html">Tutorial lesson 4</a></li>
+            <li>Lesson 11: <a href="/Lesson-11/intro-jquery-files/Lesson5/index.html">Tutorial lesson 5</a></li>
         </ul>
     </main>
     <footer>
