--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>Lesson 11: <a href="/Lesson-11/intro-jquery-files/Lesson3/index.html">Tutorial lesson 3</a></li>
             <li>Lesson 11: <a href="/Lesson-11/intro-jquery-files/Lesson4/index.html">Tutorial lesson 4</a></li>
             <li>Lesson 11: <a href="/Lesson-11/intro-jquery-files/Lesson5/index.html">Tutorial lesson 5</a></li>
-            <li>Final: <a href="/Bike%2520site%25202%2520for%2520github/index.html">Final Project</a></li>
+            <li>Final: <a href="/Final/index.html">Final Project</a></li>
         </ul>
     </main>
     <footer>
